# nlp_text_classifier

./: README.md  main.py  pyproject.toml
data/web_reviews/: trustpilot_reviews_octopus.energy?page=2_20231011100306.csv
nlp/: dataset.py  models.py  plotting.py  validation.py
nlp/tests/: test_data.py
web_scraping/: scraping.py
