[tool.poetry]
name = "nlp_text_classifier"
version = "0.1.0"
description = "practice project for text classification"
authors = ["Gareth Smith"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11, <3.12"
pandas = "^2.0.3"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
tensorflow = "^2.14, <2.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
